PZ-48 | Test framework PearlZip | Configuration