@@ -170,6 +170,20 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                    <additionalClasspathElements>
+                        <classpathElement>~/.m2/repository/org/testfx/openjfx-monocle/jdk-12.0.1+2/openjfx-monocle-jdk-12.0.1+2.jar</classpathElement>
+                    </additionalClasspathElements>
+                    <includes>
+                        <include>**/*TestSuite.class</include>
+                    </includes>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
